--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "circle-slider": "^3.0.4",
     "ol": "^5.3.3"
   },
   "devDependencies": {
