--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@turf/turf": "^5.1.6",
     "circle-slider": "^3.0.4",
-    "ol": "^5.3.3"
+    "ol": "^5.3.3",
+    "ol-ext": "^3.1.14"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
